feat : getting database messages and sending messages to chatbot api

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,8 +39,11 @@
     "prettier.config.js",
     "**/*.ts",
     "**/*.tsx",
+    "**/*.mjs",
+    "**/*.js",
     ".next/types/**/*.ts",
-    "next.config.mjs"
+    "next.config.mjs",
+    "env.js"
   ],
   "exclude": ["node_modules", ".next", "dist"]
 }
