--- a/package.json
+++ b/package.json
@@ -23,19 +23,24 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
+    "@t3-oss/env-nextjs": "^0.12.0",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "drizzle-kit": "^0.30.5",
+    "drizzle-orm": "^0.40.0",
     "geist": "^1.3.1",
     "lucide-react": "^0.454.0",
     "next": "14.2.23",
     "next-themes": "^0.3.0",
+    "postgres": "^3.4.5",
     "react": "^18",
     "react-dom": "^18",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
