--- a/.example.env
+++ b/.example.env
@@ -1,8 +1,3 @@
 # Database connection
-# DATABASE_URL=postgresql+asyncpg://postgres:mysecurepassword@db:5432/twiga_db
-DATABASE_URL=postgresql+asyncpg://postgres:mysecurepassword@localhost:5432/twiga_db
-
-
-# WhatsApp Business API
-WHATSAPP_API_URL=http://0.0.0.0:8000/devhooks
-WHATSAPP_API_TOKEN=your-api-token-goes-here
+DATABASE_URL=postgresql+asyncpg://postgres:mysecurepassword@localhost:5432/db_name
+CHATBOT_CALLBACK_URL=http://0.0.0.0:8000/devhooks
